add in swagger car class
