# app/Http/Requests/CarClassCreateRequest.php
@@ -4,6 +4,20 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
+/**
+ *
+ * @OA\Schema(
+ * required={"name", "priority"},
+ * @OA\Xml(name="CarClassCreateRequest"),
+ * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
+ * @OA\Property(property="name", type="string", example="комфорт"),
+ * @OA\Property(property="description", type="text",example="sdfsfsaffafadafsfasd"), 
+ * @OA\Property(property="priority", type="integer",example="2"), 
+ * )
+ *
+ * Class CarClassCreateRequest
+ *
+ */
 class CarClassCreateRequest extends FormRequest
 {
     /**
