# app/Http/Requests/CarClassUpdateRequest.php
@@ -4,6 +4,20 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
+/**
+ *
+ * @OA\Schema(
+ * required={"name", "priority"},
+ * @OA\Xml(name="CarClassUpdateRequest"),
+ * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
+ * @OA\Property(property="name", type="string", example="комфорт"),
+ * @OA\Property(property="description", type="text",example="sdfsfsaffafadafsfasd"), 
+ * @OA\Property(property="priority", type="integer",example="2"), 
+ * )
+ *
+ * Class CarClassUpdateRequest
+ *
+ */
 class CarClassUpdateRequest extends FormRequest
 {
     /**
